<resources>
    <string name="app_name">WorkNet</string>
    <string name="worknet">WORKNET</string>
    <string name="explore_unlimited_opportunities">Explore Unlimited Opportunities</string>
    <string name="are_you_seeking_a_job">Are You Seeking A Job?</string>
    <string name="are_you_offering_a_job">Are You OFFERING A Job?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_up_with_google">Sign Up With Google</string>
    <string name="username">UserName</string>
    <string name="email_address">Email Address</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">Login</string>
    <string name="do_not_have_an_account">Do Not Have An Account</string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="message">Message</string>
    <string name="jobs">Jobs</string>
    <string name="what_job_are_you_seeking">What Job Are You Seeking?</string>
    <string name="what_job_are_you_seeking">What Job Are You Seeking?</string>
    <string name="house_helps">House Helps</string>
    <string name="farm_workers">Farm Workers</string>
    <string name="office_work">Office Work</string>
    <string name="company_works">Company Works</string>
    <string name="daily_work">Daily Work</string>
    <string name="my_works">My Works</string>
    <string name="settings">SETTINGS</string>
    <string name="about">ABOUT</string>
</resources>