<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.SignIn">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/suitcase"
        android:layout_marginHorizontal="90dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worknet"
        android:textSize="30sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:gravity="center"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textColor="@color/black"
        android:gravity="center"
        android:textSize="25sp"
        />

    <Button
        android:id="@+id/btnGoogleLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="90dp"
        style="@style/Widget.Material3.Button.Icon"
        app:icon = "@drawable/google"
        android:text="@string/sign_in_with_google"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="#50828C"
        android:layout_marginBottom="10dp"
        />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/black"
        android:layout_marginHorizontal="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:background="#50828C"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_height="wrap_content">



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginTop="10dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/email_address"
                android:drawableStart="@drawable/ic_baseline_email_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_marginHorizontal="20dp"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:hint="@string/password"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="90dp"
        style="@style/Widget.Material3.Button.Icon"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:backgroundTint="#50828C"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:text="@string/do_not_have_an_account"
        />

    <TextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="#0864AE"
        android:text="@string/sign_up"
        />

</LinearLayout>