<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".ui.Choice">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/suitcase"
        android:layout_marginHorizontal="90dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/worknet"
        android:gravity="center"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="30sp"
        />

    <Button
        android:id="@+id/jobOffer"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="70dp"
        android:layout_marginHorizontal="90dp"
        android:backgroundTint="#50828C"
        android:text="@string/are_you_offering_a_job"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

    <Button
        android:id="@+id/jobSeeker"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="90dp"
        android:backgroundTint="#50828C"
        android:text="@string/are_you_seeking_a_job"
        android:textColor="@color/black"
        android:textStyle="bold"
        />

</LinearLayout>